Fix expanded rating box to overflow on breadcrumb

--- a/src/main/LectureComponents/LectureBodyContent.css
+++ b/src/main/LectureComponents/LectureBodyContent.css
@@ -31,7 +31,7 @@
     width: -webkit-fill-available;
 }
 
-.ui.segment {
+#comment-segment {
     padding: 1em 1em 0 1em;
 }
 
